--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,21 @@ environment:
   sdk: ^3.9.2
 
 dependencies:
+  injectable: ^2.5.2
+
+  dio: ^5.9.0
   flutter:
     sdk: flutter
+  get_it: ^8.2.0
+  
 
 dev_dependencies:
+  injectable_generator: ^2.9.0
+  build_runner: ^2.10.1
+
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
