--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,23 @@ dependencies:
   dio: ^5.9.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   flutter_svg: ^2.2.1
-  get_it: ^8.2.0
+  fluttertoast: ^9.0.0
   injectable: ^2.5.2
+  
+  json_annotation: ^4.9.0
+  loader_overlay: ^5.0.0
+  retrofit: ^4.8.0
 
 dev_dependencies:
   build_runner: ^2.10.1
-
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   injectable_generator: ^2.9.0
+  json_serializable: ^6.10.0
+  retrofit_generator: ^10.0.1
 
 flutter:
   assets:
