--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
   flutter_svg: ^2.2.1
   get_it: ^8.2.0
   injectable: ^2.5.2
-
+  bloc: ^9.1.0
+  flutter_bloc: ^9.1.1
+  
 dev_dependencies:
   build_runner: ^2.10.1
 
