--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,11 @@ dependencies:
   injectable: ^2.5.2
   bloc: ^9.1.0
   flutter_bloc: ^9.1.1
-  
+  retrofit: ^4.6.0
+  logger: ^2.6.0  # for logging purpose
+  json_annotation: ^4.9.0
+
+
 dev_dependencies:
   build_runner: ^2.10.1
 
@@ -23,6 +27,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   injectable_generator: ^2.9.0
+  retrofit_generator: ^10.0.1
+  json_serializable: ^6.10.0
+
+
 
 flutter:
   assets:
