--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   retrofit: ^4.6.0
   logger: ^2.6.0  # for logging purpose
   json_annotation: ^4.9.0
+  flutter_secure_storage: ^9.2.4
 
 
 dev_dependencies:
