--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   json_annotation: ^4.9.0
   loader_overlay: ^5.0.0
   retrofit: ^4.8.0
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
 
 dev_dependencies:
   build_runner: ^2.10.1
@@ -29,6 +32,7 @@ dev_dependencies:
   retrofit_generator: ^10.0.1
 
 flutter:
+  generate: true
   assets:
     - assets/fonts/roboto/
     - assets/fonts/inter/
@@ -52,3 +56,6 @@ flutter_assets:
   assets_path: assets/icons
   output_path: lib/core/const/
   filename: assets.dart
+
+
+
