--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,19 +4,22 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.9.2
+  sdk: '>=3.9.0 <4.0.0'
 
 dependencies:
+  dartz: ^0.10.1
   dio: ^5.9.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_svg: ^2.2.1
   get_it: ^8.2.0
+  flutter_bloc: ^9.1.1
+  bloc: ^9.1.0
   injectable: ^2.5.2
 
 dev_dependencies:
   build_runner: ^2.10.1
-
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
