--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,14 @@ dependencies:
   logger: ^2.6.0  # for logging purpose
   json_annotation: ^4.9.0
   flutter_secure_storage: ^9.2.4
+  flutter_native_splash: ^2.4.7
+
+
+flutter_native_splash:
+  color: "#004182"
+  android_12:
+    icon_background_color: "#004182"
+
 
 
 dev_dependencies:
