--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
+  percent_indicator: ^4.2.5
+  flutter_timer_countdown: ^1.0.7
 
 flutter_native_splash:
   color: "#004182"
