--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   json_annotation: ^4.9.0
   loader_overlay: ^5.0.0
   logger: ^2.6.0
+  mockito: ^5.5.1
   retrofit: ^4.6.0
 
 flutter_native_splash:
